# starward

./: .gitignore  CUSTOMER_DISCOVERY.md  Dockerfile  PUBLISHING.md  README.md  SCREENSHOT.md  moneyplan.md  pyproject.toml  requirements.txt
.github/assets/: README.md
bench/: benchmark.py
docs/: README.md  index.html  script.js  styles.css
examples/: chaos_latency_test.py
examples/cdk/: README.md  app.js  package.json
examples/learning_scenarios/: iam-basics.yaml  s3-security.yaml
examples/serverless/: handler.py  serverless.yml
examples/terraform/: README.md  main.tf
scripts/: parity_scan.py  snapshot_export.py  snapshot_import.py
src/starward/: __init__.py  server.py
src/starward/cli/: main.py
src/starward/core/: event_bus.py  plugins.py  registry.py  state_engine.py
src/starward/services/: s3.py  sqs.py
tests/: conftest.py  test_s3_service.py  test_sqs_service.py  test_state_engine.py
